# stats_can

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Makefile  README.md  activate_env.sh  build.yml  conda_upload.sh  flake.nix  meta.yaml  mkdocs.yml  noxfile.py  prek.toml  pyproject.toml  requirements.txt  sc_dev.yml  setup.py  stats_can demo.ipynb  stats_can.py  version.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  dependabot.yml  pypi.yml  pypi_stub.yml  test-pypi.yml  test-pypi_stub.yml  test.yml
docs/: Makefile  index.md  requirements.txt  rtfd-requirements.txt
docs/api/: sc.md  schemas.md  scwds.md
docs/source/: conf.py  index.rst  modules.rst  sc.rst  scwds.rst  stats_can.rst
src/stats_can/: __init__.py  api_class.py  helpers.py  sc.py  schemas.py  scwds.py
src/stats_can_ext/: __init__.py  scwds.py  stats_can.py
stats_can/: __init__.py  api_class.py  helpers.py  sc.py  scwds.py  stats_can.py
tests/: conftest.py  pytest.ini  test_error_handling.py  test_helpers.py  test_scwds.py  test_stats_can.py
tests/cassettes/: test_class_static_methods.yaml  test_class_table_list_download_delete.yaml  test_class_tables_for_vectors.yaml  test_class_update_tables.yaml  test_download_table.yaml  test_empty_release.yaml  test_gbvdbr.yaml  test_gccl.yaml  test_gcmd.yaml  test_gcs.yaml  test_gcsl.yaml  test_gdfvalnp.yaml  test_get_tables_for_vectors.yaml  test_gftd.yaml  test_gsifv.yaml  test_h5_update[table from update tables-update_tables-expected1].yaml  test_h5_update[tables list from update tables-sc_func3-expected3].yaml  test_h5_update[tables list-sc_func2-expected2].yaml  test_h5_update[tables-h5_update_tables-expected0].yaml  test_h5_update_tables.yaml  test_h5_update_tables_from_update_tables.yaml  test_h5_update_tables_list.yaml  test_h5_update_tables_list_from_update_tables.yaml  test_h5_update_tables_no_path.yaml  test_h5_update_tables_no_path_from_update_tables.yaml  test_missing_data_from_h5[table_from_h5-23100216-Downloading and loading table_23100216\n].yaml  test_missing_data_from_h5[table_from_h5-23100216-Downloading and loading table_23100216].yaml  test_missing_table_from_h5.yaml  test_table_subsets_from_vectors.yaml  test_update_tables_no_path[h5_update_tables].yaml  test_update_tables_no_path[update_tables].yaml  test_vectors_mapping[get_tables_for_vectors-expected0].yaml  test_vectors_mapping[table_subsets_from_vectors-expected1].yaml  test_vectors_to_df_by_periods.yaml  test_vectors_to_df_by_release.yaml  test_vectors_to_df_local_missing_tables_no_h5.yaml  test_zip_update_tables.yaml  test_zip_update_tables[update_func1].yaml  test_zip_update_tables[zip_update_tables].yaml  test_zip_update_tables_from_update_tables.yaml
tests/cassettes/test_scwds/: test_gbvdbr.yaml  test_gccl.yaml  test_gcmd.yaml  test_gcs.yaml  test_gdfvalnp.yaml  test_gftd.yaml  test_gsifv.yaml
tests/cassettes/test_stats_can/: test_class_table_list_download_delete.yaml  test_class_tables_for_vectors.yaml  test_class_update_tables.yaml  test_download_table.yaml  test_empty_release.yaml  test_h5_update[table from update tables-update_tables-expected1].yaml  test_h5_update[tables list from update tables-sc_func3-expected3].yaml  test_h5_update[tables list-sc_func2-expected2].yaml  test_h5_update[tables-h5_update_tables-expected0].yaml  test_missing_data_from_h5[table_from_h5-23100216-Downloading and loading table_23100216].yaml  test_update_tables_no_path[h5_update_tables].yaml  test_update_tables_no_path[update_tables].yaml  test_vectors_mapping[get_tables_for_vectors-expected0].yaml  test_vectors_to_df_by_periods.yaml  (+5 more)
tests/test_files/: 13100805.json  18100204.json  23100216.json  stats_can.h5  unrelated123.json
