[tool.poetry]
name = "stats_can"
version = "2.6.4"
description = "Read StatsCan data into python, mostly pandas dataframes"
authors = ["Ian Preston"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/ianepreston/stats_can"
repository = "https://github.com/ianepreston/stats_can"
documentation = "https://stats-can.readthedocs.io"
keywords = ["statistics", "Canada", "data", "API"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "*"
h5py = "*"
tables = "*"
tqdm = "*"
pandas = "*"
numpy = "<2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2"
pytest = ">=8"
black = ">=24"
ruff = "*"
coverage = {extras = ["toml"], version = ">=7.2"}
pytest-cov = ">=4.0"
codecov = ">=2.1"
sphinx = ">=6.1"
darglint = ">=1.7"
xdoctest = ">=1.1"
sphinx-autodoc-typehints = ">=1.23"
sphinx_rtd_theme = ">=1.2"
safety = ">=2.3"
pytest-recording = "^0.13.1"


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stats_can"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
