[project]
name = "stats_can_ext"
version = "0.0.1"
description = "Interface ontop of StatsCan"
authors = [{ name = "Eric Schles" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["statistics", "Canada", "data", "API"]
dependencies = ["requests", "tqdm", "pandas", "numpy"]

[project.urls]
Homepage = "https://github.com/EricSchles/stats_can-ext"
Repository = "https://github.com/EricSchles/stats_can-ext"
Documentation = "https://stats-can.readthedocs.io"

[dependency-groups]
dev = [
  "pre-commit>=2",
  "pytest>=8",
  "ruff",
  "coverage[toml]>=7.2",
  "pytest-cov>=4.0",
  "codecov>=2.1",
  "sphinx>=6.1",
  "darglint>=1.7",
  "xdoctest>=1.1",
  "sphinx-autodoc-typehints>=1.23",
  "sphinx_rtd_theme>=1.2",
  "safety>=3.2.4,<4",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stats_can"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
