[project]
name = "stats_can"
version = "3.1.0"
description = "Read StatsCan data into python, mostly pandas dataframes"
authors = [{ name = "Ian Preston" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["statistics", "Canada", "data", "API"]
dependencies = ["requests", "tqdm", "pandas", "numpy", "pydantic>=2.9.2"]

[project.urls]
Homepage = "https://github.com/ianepreston/stats_can"
Repository = "https://github.com/ianepreston/stats_can"
Documentation = "https://stats-can.readthedocs.io"

[dependency-groups]
dev = [
  "pre-commit>=2",
  "pytest>=8",
  "ruff",
  "coverage[toml]>=7.2",
  "pytest-cov>=4.0",
  "codecov>=2.1",
  "darglint>=1.7",
  "safety>=3.2.4,<4",
  "basedpyright>=1.36.1",
  "ipython>=8.37.0",
  "jupyter>=1.1.1",
  "pandas-stubs>=2.3.3.251219",
]
docs = [
  "markdown-include>=0.8.1",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
  "mkdocstrings[python]>=1.0.0",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stats_can"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
